--- a/src/layouts/menu_item.css
+++ b/src/layouts/menu_item.css
@@ -1,12 +1,9 @@
-.botonPrincipal{
+.botonPrincipal {
   display: flex;
   flex-direction: column;
 }
 
-.menu_boton {
-   width: 10000px;
-  }
-
-.boton{
-  width: 100px;
+.submenu {
+  display: flex;
+  flex-direction: column;
 }
