--- a/src/layouts/menu_subitem.css
+++ b/src/layouts/menu_subitem.css
@@ -1,9 +1,27 @@
-.subboton{
-    display: flex;
-    flex-direction: row;
+/* menu_subitem.css */
+
+.subboton {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.submenu{
-    display: flex;
-    flex-direction: column;
+.menubar {
+    text-decoration: none;
+    color: #333; /* Color del texto del submenú */
+    display: block;
+    padding: 10px 15px;
+    background-color: #f2f2f2; /* Color de fondo del submenú */
+}
+
+.submenu {
+    list-style-type: none;
+    padding: 0;
+    position:fixed;
+}
+
+
+/* Mostrar el submenú cuando el elemento está activo (cuando el mouse entra en el elemento) */
+.subboton:hover .submenu {
+    display: block;
 }
