--- a/src/styles/MenuSubItem.css
+++ b/src/styles/MenuSubItem.css
@@ -7,21 +7,22 @@
 }
 
 .menubar {
+    cursor:pointer;
     text-decoration: none;
     color: #333; /* Color del texto del submenú */
     display: block;
     padding: 10px 15px;
     background-color: #f2f2f2; /* Color de fondo del submenú */
+    list-style-type: none;
+    position: relative;
+    background-color: #f2f2f2;
 }
 
-.submenu {
+.submenu-derecha {
     list-style-type: none;
     padding: 0;
-    position:fixed;
-}
-
-
-/* Mostrar el submenú cuando el elemento está activo (cuando el mouse entra en el elemento) */
-.subboton:hover .submenu {
-    display: block;
+    position: absolute;
+    top: 70%;
+    left: 100%; /* Coloca el submenú a la derecha del elemento padre */
+    background-color: #f2f2f2;
 }
